--- a/src/components/Todos/TodoItem/styles.less
+++ b/src/components/Todos/TodoItem/styles.less
@@ -9,7 +9,8 @@
     .todo-tag {
       margin: 0 10px;
       white-space: normal !important;
-      max-width: 165px;
+      max-width: 130px;
+      word-break: break-all;
     }
   }
 }
