--- a/src/assets/styles/base.less
+++ b/src/assets/styles/base.less
@@ -1,4 +1,4 @@
-@import "~antd/es/style/themes/default.less";
+@import "./utils/media-queries.less";
 
 body {
   background-color: #101017 !important;
