improvements(media-queries): add author

--- a/src/assets/styles/utils/media-queries.less
+++ b/src/assets/styles/utils/media-queries.less
@@ -1,3 +1,5 @@
+// Author: John-Philip Johansson <https://gist.github.com/seriema/e7605bbcdfc9eaf67ac3>
+
 @xs-and-up: ~"only screen";
 @xs-only: ~"only screen and (max-width: @{screen-xs-max})";
 @sm-and-up: ~"only screen and (min-width: @{screen-sm-min})";
