feat: add prettierrc * Run prettier across the entire project

--- a/src/assets/styles/utils/media-queries.less
+++ b/src/assets/styles/utils/media-queries.less
@@ -1,12 +1,12 @@
 // Author: John-Philip Johansson <https://gist.github.com/seriema/e7605bbcdfc9eaf67ac3>
 
-@xs-and-up: ~"only screen";
-@xs-only: ~"only screen and (max-width: @{screen-xs-max})";
-@sm-and-up: ~"only screen and (min-width: @{screen-sm-min})";
-@sm-only: ~"only screen and (min-width: @{screen-sm-min}) and (max-width: @{screen-sm-max})";
-@md-and-up: ~"only screen and (min-width: @{screen-md-min})";
-@md-only: ~"only screen and (min-width: @{screen-md-min}) and (max-width: @{screen-md-max})";
-@lg-and-up: ~"only screen and (min-width: @{screen-lg-min})";
+@xs-and-up: ~'only screen';
+@xs-only: ~'only screen and (max-width: @{screen-xs-max})';
+@sm-and-up: ~'only screen and (min-width: @{screen-sm-min})';
+@sm-only: ~'only screen and (min-width: @{screen-sm-min}) and (max-width: @{screen-sm-max})';
+@md-and-up: ~'only screen and (min-width: @{screen-md-min})';
+@md-only: ~'only screen and (min-width: @{screen-md-min}) and (max-width: @{screen-md-max})';
+@lg-and-up: ~'only screen and (min-width: @{screen-lg-min})';
 @lg-only: @lg-and-up;
 
 @mobile: @xs-only;
