refactor(todos): add better folder structure

--- a/src/components/Todos/TodoItem/styles.less
+++ b/src/components/Todos/TodoItem/styles.less
@@ -1,4 +1,4 @@
-@import '../../../assets/styles/utils/media-queries.less';
+@import '../../../../assets/styles/utils/media-queries.less';
 
 .list-item {
   display: flex;
