Increase max-width for TODO
Increase max-width for TODO Item to 100% for desktop

--- a/src/components/TodoItem/styles.less
+++ b/src/components/TodoItem/styles.less
@@ -27,7 +27,7 @@
   @media @desktop {
     .todo-item {
       .todo-tag {
-        max-width: 600px;
+        max-width: 100%;
       }
     }
   }
