refactor(styles): add better file structure

--- a/src/assets/styles/base.less
+++ b/src/assets/styles/base.less
@@ -1,5 +1,7 @@
 @import './utils/media-queries.less';
+@import './resets/base.reset.less';
 
-body {
-  background-color: #f3f3f3 !important;
+:root {
+  --color-light-gray: #f3f3f3;
+  --body-container-normal-background-color: var(--color-light-gray);
 }
